2006-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/__init__.py:
	  Bumped version number to 0.5.0.

	RELEASE 0.5.0.

2006-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/dialog/header.py:
	  Removed unused variables.

2006-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* MANIFEST.in:
	  Removed docs.

	* lib/gaupol/gtk/dialog/find.py:
	  Require self._page to match current page on focus-out and replace.

2006-06-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/file/mpsub.py:
	  Fixed lack of calc.

2006-06-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* INSTALL:
	* README:
	* TODO:
	  Updated.

	* lib/gaupol/base/delegate/__init__.py:
	* lib/gaupol/base/delegate/action.py:
	* lib/gaupol/base/delegate/edit.py:
	* lib/gaupol/base/delegate/format.py:
	* lib/gaupol/base/file/ssa.py:
	* lib/gaupol/base/model.py:
	* lib/gaupol/base/tags/converter.py:
	* lib/gaupol/gtk/cellrend/text.py:
	* lib/gaupol/gtk/delegate/__init__.py:
	* lib/gaupol/gtk/delegate/edit.py:
	* lib/gaupol/gtk/delegate/format.py:
	* lib/gaupol/gtk/delegate/menuupdate.py:
	* lib/gaupol/gtk/dialog/multiclose.py:
	* lib/gaupol/gtk/dialog/spellcheck.py:
	* lib/gaupol/gtk/page.py:
	* lib/gaupol/gtk/util/gtklib.py:
	* lib/gaupol/gtk/view.py:
	* lib/gaupol/test/__init__.py:
	  Cosmetic changes.

	* setup.py:
	  Added comments.
	  Added --dry-run checks.

2006-06-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* MANIFEST.in:
	  Updated.

	* lib/gaupol/gtk/dialog/spellcheck.py:
	  Fixed SyntaxError.

	* setup.cfg:
	  Keep only the record line.

	* setup.py:
	  Updated.
	  Improved clean command.
	  Fixed errors.
	  Fixed paths.py generation.

2006-06-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/util/filelib.py:
	  Added readlines function.

	* lib/gaupol/gtk/delegate/edit.py:
	  Fixed fast man's double-click bug #6235.

	* lib/gaupol/gtk/dialog/spellcheck.py:
	  Use filelib.

	* setup.cfg:
	  Removed optimize.

	* setup.py:
	  Preliminary fixes.

	* tools/hide:
	* tools/pydoc: