@@ -12,14 +12,18 @@ Plans for 0.6.0
     [ ] Smarter translation file opening (bug #6245)
     [?] Support .srtx format (bug #6244)
 
+  Changes:
+    [D] Copy-paste now works from one project to another
+
 
 Plans after 0.6.0
 =================
 
-  * Common error correction
-  * Capitalization correction
-  * Line reformatting
-  * Hearing impaired subtitle removal
+  * Wizards (wait for GTK 2.10?)
+     - Common error correction
+     - Capitalization correction
+     - Line reformatting
+     - Hearing impaired subtitle removal
 
 
 Unscheduled
